--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: OinkTowny
 author: Dendrobyte, Mobkinz78
-version: 0.78a
+version: 0.79a
 main: com.redstoneoinkcraft.oinktowny.Main
 description: OinkTowny plugin made for Oinkcraft's new towny reboot!
+softdepend: [Multiverse-Core]
 api-version: 1.13
 commands:
   oinktowny:
